# CrowdFM

./: .gitignore  README.md  checkpoint.pt  evaluate.py  pyproject.toml  train.py
config/: default.yaml
data/Dog/: label.csv  truth.csv
data/SP/: label.csv  truth.csv
data/Senti/: truth.csv
data/Trec/: label.csv  truth.csv
data/ZC_all/: label.csv  truth.csv
data/ZC_in/: label.csv  truth.csv
data/ZC_us/: label.csv  truth.csv
src/cfm/: utils.py
src/cfm/data/: crowd_data.py  crowd_dataset.py  crowd_simulator.py  load_data.py
src/cfm/model/: CFM.py  CFMEncoder.py
